fix(academia-template): use em instead of rem for block spacing between li

--- a/academia.monochromatic.dev/template/src/index.css
+++ b/academia.monochromatic.dev/template/src/index.css
@@ -115,7 +115,7 @@ body {
   li {
     --outdent: 0em;
     + li {
-      margin-block-start: 1.5rem;
+      margin-block-start: 1em;
     }
   }
 
